改用java20,使用虚拟线程执行,编译打包改为jpackage命令,移除了javaPackager,编译后使用ZGC